--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,10 +13,14 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
-      - ./init-scripts/init-tables.sql:/docker-entrypoint-initdb.d/01-init-tables.sql
-      - ./init-scripts/seed-data.sql:/docker-entrypoint-initdb.d/02-seed-data.sql
+      - ./init-scripts:/docker-entrypoint-initdb.d
     networks:
       - app_network
+    healthcheck:  # THÊM
+      test: ["CMD-SHELL", "pg_isready -U myuser -d myapp"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   # Node.js Application
   app:
@@ -31,8 +35,9 @@ services:
       - DB_USER=myuser
       - DB_PASSWORD=mypassword
       - NODE_ENV=development
-    depends_on:
-      - postgres
+    depends_on:  # CẬP NHẬT
+      postgres:
+        condition: service_healthy
     networks:
       - app_network
 
