--- a/.gitignore
+++ b/.gitignore
@@ -18,8 +18,8 @@ data/
 # ===========================
 # Environment files
 # ===========================
-.env
-*.env
+#.env
+#*.env
 
 # ===========================
 # OS / Editor specific
