Add login API for staff

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,11 +15,21 @@ services:
       - ./init-scripts:/docker-entrypoint-initdb.d:ro
     restart: unless-stopped
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB} -h localhost"]
+      test: ["CMD-SHELL", "pg_isready -U lotus_admin -d lotus_db -h localhost"]
       interval: 5s
       timeout: 5s
       retries: 10
-      start_period: 5s
+      start_period: 10s
+
+  backend:
+    build: .
+    container_name: lotus_fastapi
+    ports:
+      - "8000:8000"
+    depends_on:
+      db:
+        condition: service_healthy
+    restart: unless-stopped
 
   pgadmin:
     image: dpage/pgadmin4:7
