--- a/.env
+++ b/.env
@@ -1,3 +1,15 @@
+APP_NAME=Flight Booking System
+DEBUG=True
+
 POSTGRES_USER=lotus_admin
 POSTGRES_PASSWORD=LotusTravel2025
 POSTGRES_DB=lotus_db
+POSTGRES_HOST=db
+POSTGRES_PORT=5432
+
+SECRET_KEY=abcxyz123456
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=60
+REFRESH_TOKEN_EXPIRE_MINUTES=10080
+
+
