--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,10 +1,7 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-sqlalchemy==2.0.25
-asyncpg==0.29.0
-pydantic==2.6.0
-pydantic-settings==2.1.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==3.2.2
-python-multipart==0.0.9
+fastapi
+uvicorn
+sqlalchemy[asyncio]
+asyncpg
+pydantic
+email-validator
+python-multipart
