Mô tả ngắn gọn nội dung thay đổi

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-POSTGRES_USER=lotus_admin
-POSTGRES_PASSWORD=LotusTravel2025
-POSTGRES_DB=lotus_db
+DATABASE_URL=postgresql://lotus_admin:LotusTravel2025@db:5432/lotus_db
+SECRET_KEY=change-me-to-a-secure-random-string
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=1440
