--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,10 @@
-fastapi
-uvicorn
-sqlalchemy[asyncio]
-asyncpg
-pydantic
-email-validator
-python-multipart
+fastapi==0.95.2
+uvicorn[standard]==0.22.0
+SQLAlchemy==1.4.52
+psycopg2-binary==2.9.7
+python-jose==3.3.0
+passlib[bcrypt]==1.7.4
+python-dotenv==1.0.0
+pydantic==1.10.7
+python-multipart==0.0.6
+email-validator==1.3.1
