--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.8'
+
 services:
   db:
     image: postgres:15
@@ -26,11 +28,13 @@ services:
       db:
         condition: service_healthy
     environment:
-      # QUAN TRỌNG: Đã đổi thành postgresql:// (bỏ +asyncpg)
       DATABASE_URL: postgresql://lotus_admin:LotusTravel2025@db:5432/lotus_db
     ports:
       - "8000:8000"
     restart: unless-stopped
+    volumes:
+      - ./backend/app:/app
+      - ./backend/requirements.txt:/app/requirements.txt  # Mount requirements để theo dõi thay đổi
 
   pgadmin:
     image: dpage/pgadmin4:7
