Change database host to localhost in .env

--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 # Database connection (cho app/database.py - admin style)
-DATABASE_URL=postgresql://lotus_admin:LotusTravel2025@db:5432/lotus_db
+DATABASE_URL=postgresql://lotus_admin:LotusTravel2025@localhost:5432/lotus_db
 
 # Database credentials (cho app/core/config.py - user style)
 POSTGRES_USER=lotus_admin
 POSTGRES_PASSWORD=LotusTravel2025
 POSTGRES_DB=lotus_db
-POSTGRES_HOST=db
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 
 # Security
